--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@vercel/postgres": "^0.10.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.4.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
@@ -56,6 +59,7 @@
     "vaul": "^1.1.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -66,4 +70,3 @@
     "typescript": "^5"
   }
 }
- 
